# Physical_and_Humanoid_Robotics_Book

./: .gitignore  README.md
.specify/memory/: constitution.md
References/: 00_simple_agent.py  gemini_model.py
content/: docusaurus.config.js  package-lock.json  package.json
content/docs/: dynamics.md  intro.md  kinematics.md
history/adr/: 0001-authentication-technology-stack.md
history/prompts/001-section-foundation/: 0001-specify-robotics-book-foundation.spec.prompt.md  0002-plan-robotics-book-foundation.plan.prompt.md  0003-tasks-for-robotics-book-foundation.tasks.prompt.md  (+3 more)
server/: Dockerfile  alembic.ini  main.py  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 001_5_create_chat_tables.py  001_create_auth_tables.py  002_link_chat_to_users.py  003_migrate_user_role_from_enum_to_string.py
server/app/api/: dependencies.py
server/app/api/v1/: admin.py  auth.py  chat.py  index.py  users.py
server/app/core/: config.py
server/app/db/: base.py
server/app/models/: chat.py  chat_db.py  user.py
server/app/schemas/: user.py
server/app/services/: ai_service.py  auth_service.py  embedding.py  markdown_parser.py  vector_db.py
server/routes/: chat.py  personalize.py
server/server/: requirements.txt
specs/001-section-foundation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-section-intelligence-rag/: data-model.md  plan.md  research.md  spec.md  tasks.md
specs/003-section-user-auth/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+9 files in other folders)
